# Laplace

./: .gitignore  README.md  main.py  pyproject.toml
app/analytics/: metrics.py
app/collectors/: leboncoin.py
app/core/: config.py  database.py
app/dashboard/: dashboard.py
app/models/: listing.py
scripts/: scrape.py
